[package]
name = "uka_billet_bot"
version = "0.1.0"
authors = ["trygve <trygve.woldseth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#formdata = "0.13.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3.17"
open = "2.0.1"